css/index.css
*{ font-weight: 300;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
  }
html{    background-color: #5A0303; 

}
  body{
    font-family: 'Ranchers', cursive;
    overflow-x: hidden;
    }

h1{
    color:#EADFC9;
    border:2px solid #EADFC9;
    background-color:#1C1515;
    -webkit-text-stroke-width: .081rem;
    -webkit-text-stroke-color: #020202; 
    font-weight: 600;
}
h2{
    height: 60px;
    width: auto; 
    display: block;
    text-align: center;
    color:#EADFC9; 
    box-sizing: border-box;
    background-image: url(../img/down.png);
    background-repeat: no-repeat;
    background-position: bottom center;
    background-size: 2%;

}
a{
    color: #B1F5DC;
    text-decoration:none;
}
a:hover{
    color: pink;
}
h3 {
    display: inline-flex;
    font-size: 2.2rem;
    margin-left: 50px;
}
h4{
font-family: "Courier New", Courier, monospace;
font-size:3rem;
}
h5{
    font-family: 'Monoton', cursive;
    font-size: 3rem;
}

header {
    background-image: url(../img/background.png);
    background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   border:6px solid  #020202;
   padding: 30px;
   margin-bottom: 20px;
}
.welcome{
    text-align: center;
    font-size: 4.2rem;
    margin-left: 5%;
    margin-right: 5%;
    margin-bottom: 14px;
    border-radius: 30px;
    box-shadow: 0px 2px 2px #EADFC9;
    padding: 25px 30px 25px 30px;
    font-family: "Courier New", Courier, monospace
}
.subtitle{
    text-align: center;
    font-size:2.6rem;
    margin-left: 15%; 
    margin-right:15%;
    margin-bottom: 5px;
    padding: 15px 20px 15px 20px;
    border-radius:30px;
    box-shadow: 0px 2px 2px #EADFC9;
    font-family: "Courier New", Courier, monospace
}
.scroll{
    margin-bottom: 5px;
}

.card1{

    height: 110px;
    width: 400px;
    padding: 50px 0 0 80px;
    background-image: url(../img/trees.png);
    background-repeat: no-repeat;
    background-size: 15%;
    background-position: top center;
    box-sizing: border-box;
    border:2px solid #CDE0FF;
    margin-bottom: 20px;
    margin-top: 5px;
    display: inline-block;
    float:top left;
    box-shadow: 3px 4px 2px #99252f;
   } 
.card2{
    height: 110px;
    width: 400px;
    padding: 50px 0 0 90px;
    background-image: url(../img/trees.png);
    background-repeat: no-repeat;
    background-size: 15%;
    background-position: top center;
    box-sizing: border-box;
    border:2px solid #CDE0FF;
    float: right;
    box-shadow: 3px 4px 2px #99252f;
   } 
.card3{
    height: 110px;
    width: 400px;
    padding: 50px 0 0 85px;
    margin-bottom: 20px;
    background-image: url(../img/trees.png);
    background-repeat: no-repeat;
    background-size: 15%;
    background-position: top center;
    box-sizing: border-box;
     border:2px solid #CDE0FF;
    display: inline-block;
    margin-top: 5px;
    float: left;
    box-shadow: 3px 4px 2px #99252f;
   

   } 
 .card4{
    height: 110px;
    width: 400px;
    padding: 50px 0 0 118px;
    margin-left: 161;
    margin-bottom: 20px;
    background-image: url(../img/trees.png);
    background-repeat: no-repeat;
    background-size: 15%;
    background-position: top center;
    box-sizing: border-box;
    border:2px solid #CDE0FF;
    display: inline-block;
    float:  right;
    box-shadow: 3px 4px 2px #99252f;
} 

.emblum {
    text-align: center;
}
.pg-break{
    display: inline-block;
    height: 100px;
    width: 100%;
    background-image: url(../img/bird-left.png) ;
    background-repeat: repeat-x;
    margin-top: 20px;
    margin-bottom: 50px;
}
.about-me{
    background: linear-gradient(#5A0303, #CC5959);
    padding-bottom: 5%
}

.heading{
    height: 190px;
    margin-bottom: 95px;
}
.sign {
    
    height:110px;
    width: 130px;
    position: relative;
    float:right;
    right: 5%;
    background-image: url(../img/about-me.png);
    background-size: cover;
    margin-top: 2%;
}
 .title{

    float:left;
    margin:2.8% 5% 2% 5%;
    background-image: url(../img/background.png);
    background-size: cover;
    border:2px solid  #EADFC9;
    color:#EADFC9;
    -webkit-text-stroke-width: .01rem;
    -webkit-text-stroke-color: #1F1F1F; 
    padding: 2%;
}

.post{
    height: auto;
    font-family: "Times New Roman", Times, serif;
    font-size: 1.3rem;
    background-color: FloralWhite;
    background-image: url(../img/paper-texture.png);
    background-repeat: repeat-y;
    background-size: cover;
    background-position: center;
    margin: 20px 10% 5px 10%;
    margin-right: 10%;
    margin-left: 10%;
    line-height: 35px;
    padding: 15px;
}

.about-me img{
    width: 360px;
    margin: 5px;
}
.portrait {
    overflow: hidden;
    float: right;
    padding: 20px 10px 20px 20px;
     box-sizing: border-box;
}
.portfolio{
    background: linear-gradient(#5A0303 33%,#F6BEAF);
}
.rbw{
    box-sizing: border-box;
    height: 272px;
    width: 100%;
    background-image: url(../img/rbw.png) ;
    background-size: cover;
    background-color: #75204b;
    
}
.p-heading{
        height: 250px;
        margin-bottom: 5px;
        
}
.p-sign{
    height:110px;
    width: 146px;
    position: relative;
    float:right;
    right: 5%;
    background-image: url(../img/portfolio.png);
    background-size: cover;
    margin-top: 2%;
   }
   .button{
    display: inline-flex;
    font-family: 'Monoton', cursive;
    font-size:2.3rem;
    color: #3B5F74;
    background: #B9CBA2;
    border-radius: 20px;
    padding: 20px;
    position: relative;
    top: 135px;
    left: 37%;
   }
.vine img{
    width: 800px;
    margin: 5px;
   position: relative;
   top: 75px;
   left: 20%;
  

}
.box{
    height: 1745px;
}
.viewmore{
    display: inline-flex;
    font-family: 'Monoton', cursive;
    font-size:2.3rem;
    background: #B9CBA2;
    border-radius: 20px;
    padding: 20px;
    position: relative;
    top: 135px;
    left: 40%;
    color: #3B5F74;
}
.viewmore a{
     color: #3B5F74;
}
.viewmore a:hover {
    color: #a8dadc;
    background-color: #FF9AA1;
    margin: 20px;
}

